[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lib-ml"
version = "0.2.0"
dependencies = [
    "scikit-learn",
    "nltk",
    "pandas"
]
authors = [
    {name = "Anyan Huang", email = "anyanhuang@tudelft.nl"}
]
dynamic = ["description", "readme", "requires-python", "classifiers"]